# pyanide

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGES.md  Makefile  Pipfile  README.md  pyproject.toml  quick_build.sh  setup.py  tox.ini
docs/: TODO.md
pyanide/: __init__.py  __main__.py  main.py
test/: test_main.py
